# SITCON-Camp-2024-Hackathon-Team5-Public

./: .gitignore  README.de.md  README.md  README.zh-TW.md  config_template.py  main.py  pyproject.toml  requirements.txt
database/: calendar_user_info.json
docs/: structure.md  user_story.md  user_story_de.md
tools/: calendar_.py  help.py  picture.py  schedule.py  weather.py
